--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     compile 'com.android.support:design:25.0.0'
     compile 'com.android.support:cardview-v7:25.0.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
