--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,7 @@
 
         <activity android:name=".views.SplashActivity">
             android:noHistory="true"
-            android:theme="@style/SplashTheme"
-            android:name=".views.SplashActivity">
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,8 +37,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".views.NavigationDriver"
-            android:label="@string/title_activity_navigation_driver"
+            android:name=".views.MenuActivity"
+            android:label="@string/title_activity_menu"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
