--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.MainActivity">
+        <activity android:name=".views.MusicActivity">
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
@@ -39,7 +39,11 @@
         <activity
             android:name=".views.MenuActivity"
             android:label="@string/title_activity_menu"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".views.base.BaseActivity" />
+        <activity android:name=".views.fragments.SongsFragment" />
+        <activity android:name=".views.fragments.AlbumFragment" />
+        <activity android:name=".views.fragments.ArtistFragment"></activity>
     </application>
 
 </manifest>
