--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,8 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "com.levup.simpleplayer"
+        vectorDrawables.useSupportLibrary = true
+        applicationId "com.example.java.simpleplayer"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
@@ -41,6 +42,7 @@ repositories {
         }
     }
 }
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
